# this-examples

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benches/endpoint-benchmarks/: Cargo.toml  README.md  STRESS_TEST_GUIDE.md  run_stress_test.sh  setup_dynamodb.sh
benches/endpoint-benchmarks/benches/: dynamodb_benchmarks.rs  dynamodb_stress_test.rs  graphql_benchmarks.rs  nested_routes_benchmarks.rs  rest_benchmarks.rs  simple_nested_benchmark.rs  stress_test.rs
benches/endpoint-benchmarks/src/: lib.rs
crates/billing/: Cargo.toml
crates/billing/benches/: billing_benchmarks.rs
crates/billing/config/: links.yaml
crates/billing/src/: lib.rs  module.rs  stores.rs
crates/billing/src/entities/: mod.rs
crates/billing/src/entities/invoice/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/billing/src/entities/order/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/billing/src/entities/payment/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/catalog/: Cargo.toml
crates/catalog/config/: links.yaml
crates/catalog/src/: lib.rs  module.rs  stores.rs
crates/catalog/src/entities/: mod.rs
crates/catalog/src/entities/category/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/catalog/src/entities/product/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/catalog/src/entities/tag/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/inventory/: Cargo.toml
crates/inventory/config/: links.yaml
crates/inventory/src/: lib.rs  module.rs  stores.rs
crates/inventory/src/entities/: mod.rs
crates/inventory/src/entities/activity/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/inventory/src/entities/stock_item/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/inventory/src/entities/stock_movement/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/inventory/src/entities/store/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/inventory/src/entities/usage/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/inventory/src/entities/warehouse/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
crates/test-data/: Cargo.toml  README.md
crates/test-data/src/: lib.rs
docs/: README.md  architecture.md  best-practices.md  development.md  entities-and-macros.md  graphql-playground.md  links-and-relations.md  nested-routes.md  overview.md  protocols.md  rest-api.md  testing.md
docs/issues/templates/: adr_template.md  bug_template.md  enhancement_template.md  feature_template.md  roadmap_template.md
examples/auth-sts/: Cargo.toml
examples/auth-sts/config/: auth.yaml
examples/auth-sts/src/: main.rs
examples/cognitive-signals/: Cargo.toml
examples/cognitive-signals/src/: main.rs
examples/dynamodb/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  setup.sh  this.yaml
examples/dynamodb/src/: main.rs
examples/event-flows/: Cargo.toml  README.md  this.yaml
examples/event-flows/config/: links.yaml
examples/event-flows/src/: main.rs
examples/event-flows/static/: index.html
examples/graphql/: Cargo.toml  this.yaml
examples/graphql/config/: events.yaml
examples/graphql/src/: main.rs
examples/grpc/: Cargo.toml  README.md  this.yaml
examples/grpc/config/: events.yaml
examples/grpc/proto/: this_billing.proto
examples/grpc/src/: main.rs
examples/lmdb/: Cargo.toml  README.md
examples/lmdb/src/: main.rs
examples/mongodb/: Cargo.toml  README.md
examples/mongodb/src/: main.rs
examples/multi-module/: Cargo.toml  this.yaml
examples/multi-module/config/: events.yaml
examples/multi-module/src/: main.rs
examples/mysql/: Cargo.toml  README.md  docker-compose.yml
examples/mysql/src/: main.rs
examples/neo4j/: Cargo.toml  README.md  docker-compose.yml
examples/neo4j/src/: main.rs
examples/postgres/: Cargo.toml  README.md  docker-compose.yml
examples/postgres/src/: main.rs
examples/rest/: Cargo.toml  this.yaml
examples/rest/src/: main.rs
examples/scylladb/: Cargo.toml  README.md  docker-compose.yml
examples/scylladb/src/: main.rs
examples/websocket/: Cargo.toml  README.md  this.yaml
examples/websocket/config/: events.yaml
examples/websocket/src/: main.rs
examples/websocket/static/: ws-client.html
