[workspace]
members = [
  "crates/billing",
  "crates/catalog",
  "crates/inventory",
  "crates/test-data",
  "examples/rest",
  "examples/graphql",
  "examples/dynamodb",
  "examples/postgres",
  "examples/mongodb",
  "examples/neo4j",
  "examples/scylladb",
  "examples/mysql",
  "examples/lmdb",
  "examples/websocket",
  "examples/grpc",
  "examples/event-flows",
  "examples/multi-module",
  "examples/auth-sts",
  "examples/cognitive-signals",
  "benches/endpoint-benchmarks",
]
resolver = "2"

# Use local this-rs for development (new APIs not yet published to crates.io)
[patch.crates-io]
this-rs = { path = "../this" }
