[package]
name = "endpoint-benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "rest_benchmarks"
harness = false

[[bench]]
name = "graphql_benchmarks"
harness = false

[[bench]]
name = "stress_test"
harness = false

[[bench]]
name = "dynamodb_benchmarks"
harness = false

[[bench]]
name = "dynamodb_stress_test"
harness = false

[[bench]]
name = "nested_routes_benchmarks"
harness = false

[[bench]]
name = "simple_nested_benchmark"
harness = false

[dependencies]
billing = { path = "../../crates/billing", features = ["dynamodb"] }
test-data = { path = "../../crates/test-data" }
this-rs = { version = "0.0.6", features = ["graphql", "dynamodb"] }

# HTTP client and server
tokio = { version = "1", features = ["full"] }
axum = "0.8"
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1"] }
http-body-util = "0.1"
tower = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Utils
anyhow = "1"
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# AWS (for DynamoDB tests)
aws-sdk-dynamodb = "1"
aws-config = "1"

# Test utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"