[package]
name = "cognitive_signals_example"
version = "0.1.0"
edition = "2021"

[dependencies]
this-rs = { version = "0.0.9" }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
