[package]
name = "mysql_example"
version = "0.1.0"
edition = "2021"

[dependencies]
billing = { path = "../../crates/billing", features = ["mysql"] }
this-rs = { path = "../../../this", features = ["mysql"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
async-trait = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql"] }
