[package]
name = "rest_example"
version = "0.1.0"
edition = "2021"

[dependencies]
billing = { path = "../../crates/billing" }
test-data = { path = "../../crates/test-data" }
this-rs = "0.0.7"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
async-trait = "0.1"
axum = "0.8"
